--- a/netty-spring-boot-starter-autoconfigurer/pom.xml
+++ b/netty-spring-boot-starter-autoconfigurer/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.nick</groupId>
     <artifactId>netty-spring-boot-starter-autoconfigurer</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0-RELEASE</version>
     <packaging>jar</packaging>
 
     <name>netty-spring-boot-starter-autoconfigurer</name>
